# openrates

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
openrates/: openrates.py
openrates/db/: models.py
openrates/static/: starter-template.css
openrates/templates/: index.html
tests/: test_openrates.py
