[tool.poetry]
name = "openrates"
version = "0.3.2"
description = ""
authors = ["Brian <contact@openrates.net>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
SQLAlchemy = "^1.4.17"
requests = "^2.25.1"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
