[tool.poetry]
name = "openrates"
version = "0.3.6"
description = ""
authors = ["Brian <contact@openrates.net>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
SQLAlchemy = "*"
requests = "*"
APScheduler = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
